[gd_scene load_steps=3 format=3 uid="uid://coixrwl58swny"]

[ext_resource type="Script" uid="uid://78hf1m1sryup" path="res://stages/main_menu/prototype_menu.gd" id="1_phs36"]

[sub_resource type="ButtonGroup" id="ButtonGroup_phs36"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_phs36")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -54.5
offset_right = 100.0
offset_bottom = 54.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "this is a public unfinished preview version of the level editor.
everything is subject to change. this is not final!
levels created in this build will not load in other versions."
horizontal_alignment = 1
vertical_alignment = 2
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Gotoleveleditor" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Go to level editor"

[node name="Testlevel" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Play level"

[node name="BrowseFiles" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Browse level files"

[node name="EditorSounds" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Enable editor sounds"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LangEn" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_phs36")
text = "EN"

[node name="LangRu" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_phs36")
text = "RU"

[node name="LangPl" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_phs36")
text = "PL"

[node name="LangTr" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_phs36")
text = "TR"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 16.0
offset_bottom = 39.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Mario Worker: Community Edition
PRE-ALPHA PROTOTYPE Build 1"
horizontal_alignment = 1

[node name="LoadFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
disable_3d = true
title = "Open a File"
initial_position = 2
size = Vector2i(540, 420)
popup_window = true
ok_button_text = "Open"
dialog_autowrap = true
file_mode = 0
display_mode = 1
access = 1
filters = PackedStringArray("*.tscn;Level scenes")
favorites_enabled = false
recent_list_enabled = false

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Gotoleveleditor" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Testlevel" to="." method="_on_test_level_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/BrowseFiles" to="." method="_on_browse_files_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/LangEn" to="." method="_on_lang_toggled" binds= ["en"]]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/LangRu" to="." method="_on_lang_toggled" binds= ["ru"]]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/LangPl" to="." method="_on_lang_toggled" binds= ["pl"]]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/LangTr" to="." method="_on_lang_toggled" binds= ["tr"]]
[connection signal="canceled" from="LoadFileDialog" to="LoadFileDialog" method="hide"]
[connection signal="file_selected" from="LoadFileDialog" to="." method="_on_load_file_dialog_file_selected"]
